--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
       <hr />
       <div class="contact-me">
         <h2>Get In Touch with me</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <!-- <h3>Lorem ipsum dolor sit amet, non elit.</h3>
         <p>
           Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
           tellus donec dui, ornare erat.
-        </p>
+        </p> -->
         <a class="btn" href="mailto:dakshmahajan29@gmail.com">CONTACT ME</a>
       </div>
     </div>
