changed some font sizes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <img class="top-cloud" src="Images/cloud.png" alt="" /><br />
 
       <h1>I m Daksh</h1>
-      <p>I m a programmer</p>
+      <h2>I m a programmer</h2>
       <img class="bottom-cloud" src="Images/cloud.png" alt="" /><br />
       <img src="Images/mountain.png" alt="" />
     </div>
