--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="pic" src="Images/c++.png" alt="C++" />
-          <h3>C++ programming Language</h3>
-          <!-- <p>
+          <img class="pic-1" src="Images/c++.png" alt="C++" />
+          <h3 class="align">C++ programming Language</h3>
+          <p>
             Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
             Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit
             nam, lectus ante, ut lorem eros.
-          </p> -->
+          </p>
         </div>
         <div class="skill-row">
           <img
-            class="pic"
+            class="pic-2"
             src="Images/Web-Dev.png"
             width="180"
             height="180"
@@ -69,6 +69,7 @@
           </p> -->
         </div>
       </div>
+
       <hr />
       <div class="contact-me">
         <h2>Get In Touch with me</h2>
