--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           height="180"
         />
         <h2>Hello.</h2>
-        <p>
+        <p class="intro">
           I m a university student working on my way to become one of the best
           developers out there
         </p>
@@ -48,9 +48,8 @@
           <img class="pic-1" src="Images/c++.png" alt="C++" />
           <h3 class="align">C++ programming Language</h3>
           <p>
-            Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
-            Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit
-            nam, lectus ante, ut lorem eros.
+            I started learning to code in c++ because i want to make video
+            games.
           </p>
         </div>
         <div class="skill-row">
@@ -63,9 +62,7 @@
           />
           <h3>Web Development</h3>
           <!-- <p>
-            Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
-            bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel
-            eu, rutrum nam.
+             
           </p> -->
         </div>
       </div>
