made more changes

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         >Twitter</a
       >
       <!-- <a class="footer-link" href="https://www.appbrewery.co/">Website</a> -->
-      <p>© Daksh Mahajan.</p>
+      <p class="end-text">© Daksh Mahajan.</p>
     </div>
   </body>
 </html>
